--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "firebase": "8.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "5.1",
+    "react-router-dom": "^6.6.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.7.0",
     "web-vitals": "^1.1.2"
